--- a/SASS/sass/style.scss
+++ b/SASS/sass/style.scss
@@ -2,11 +2,17 @@
 //con la regla AppRule
 @use 'navbar';
 @use 'reset'; 
+@use 'hero';
 
 //Se llama a un parcial que contiene variables
 @use 'variables';
-
 //para usarlo la sintaxis es: nombre_parcial.$nombre_variable
+
+//Se llama a un archivo con ciclos
+@use 'animation';
+
+//Se llama a un mixing
+@use 'mixinsfunc';
 
 //declaración de una variable
 $color-principal: crimson;
@@ -53,9 +59,7 @@ Pero podemos usar el anidamiento
         width: 90%;
         margin: 0 auto;
         height: 70px;
-        display:flex;
-        align-items: center;
-        justify-content: space-evenly;
+        @include mixinsfunc.crear-flexbox(space-evenly);
         gap: 1em;
     }
         &__item{
